<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="bookstore.laidu.org.bookstore.activity.LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_weight="1"
            android:text="@string/username" />
        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textAlignment="center"
            android:hint="@string/inputUsername"
            android:textStyle="italic"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40px"
        android:orientation="horizontal">
        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="20px"
            android:layout_weight="1"
            android:text="@string/password" />
        <EditText
            android:id="@+id/password"
            android:password="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textAlignment="center"
            android:hint="@string/inputPassword"
            android:textStyle="italic"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40px"
        android:orientation="horizontal"

        android:gravity="center"
        >
        <Button
            android:padding="40px"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:onClick="login"/>
        <Button
            android:padding="20px"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            android:onClick="register"/>
    </LinearLayout>

</LinearLayout>